@@ -260,7 +260,7 @@ class ModuleIsotopeCheckout extends ModuleIsotope
 				'class'	=> $step . ($this->strCurrentStep == $step ? ' active' : '') . ($blnStepPassed ? ' passed' : '') . ($i == 0 ? ' first' : ''),
 				'label'	=> (strlen($GLOBALS['TL_LANG']['ISO']['checkout_'.$step]) ? $GLOBALS['TL_LANG']['ISO']['checkout_'.$step] : $step),
 				'href'	=> ($blnStepPassed ? $this->addToUrl('step='.$step, true) : ''),
-				'title'	=> 'Go back to step "'.$step.'"',
+				'title'	=> specialchars('Go back to step "'.$step.'"'),
 			);
 		}
 		
